<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sharetrain.gutsapps.com.views.WelcomeActivity"
    android:background="@color/accent_material_dark">

    <ImageView
        android:layout_width="285dp"
        android:layout_height="180dp"
        android:id="@+id/ivTrainRails"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_train_rails"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="150dp"
        android:paddingBottom="150dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:id="@+id/etFrom"
            android:hint="@string/welcome_from"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:id="@+id/etTo"
            android:hint="@string/welcome_to"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btSearch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_search"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
