<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/gradient_notif_list"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvFromNotList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:height="20sp"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFromNotListValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="20sp"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvToNotList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:height="20sp"
                android:text="@string/arrival"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvToNotListValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="20sp"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvDateNotList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:height="20sp"
                android:text="@string/received"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDateNotListValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="20sp"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tvUserNotList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:height="20sp"
                android:text="@string/user"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserNotListValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="20sp"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:background="@drawable/gradient_letter"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:src="@android:drawable/ic_dialog_email"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>